--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
                     Actualmente estoy estudiando la Licenciatura en
                     Informática en la UNLP.<br><br>Soy jugador aficionado de ajedrez, dedicándome a su estudio desde
                     comienzos del año 2020. Como parte de mi formación, asistí a clases con el Prof. Jorge Pérez
-                    Grizia (<a href="https://ratings.fide.com/profile/32013361">ID FIDE 32013361</a>) (2021) y durante
+                    Grizia (<a href="https://ratings.fide.com/profile/32013361" target="_blank" rel="noopener noreferrer">ID FIDE 32013361</a>) (2021) y durante
                     2022 realicé el Curso de Ajedrez para Nivel Intermedio del Club
                     de Ajedrez de La Plata, dictado por el Prof. Diego Cirulli (<a
-                        href="https://ratings.fide.com/profile/117692">ID FIDE 117692</a>). El año 2023 asistí a
-                    clases dictadas por el Prof. Raúl Ronco (<a href="https://ratings.fide.com/profile/114596">ID FIDE
+                        href="https://ratings.fide.com/profile/117692" target="_blank" rel="noopener noreferrer">ID FIDE 117692</a>). El año 2023 asistí a
+                    clases dictadas por el Prof. Raúl Ronco (<a href="https://ratings.fide.com/profile/114596" target="_blank" rel="noopener noreferrer">ID FIDE
                         114596</a>) y el Maestro y problemista Raúl Adolfo Ocampo.<br><br>Mi principal interés en el
                     ajedrez
                     como objeto de enseñanza excede al propio juego. Si bien la formación ajedrecística requiere un
