--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
 
             <div class="about links">
                 <h2 class="title2">Recursos</h2>
+                <h4>Escanear el código QR y seleccionar la opción "Abrir en el navegador"</h4>
                 <ul class="qrs">
                     <li id="link_1"><a class="link-item" id="link-item_1"
                             href="https://maurokeindeveloper.github.io/online" target="_blank">Web</a><img
